feat: Delete S3 file
